--- a/SpringCloudDemo/spring-cloud-payment-service2/src/main/resources/application.yml
+++ b/SpringCloudDemo/spring-cloud-payment-service2/src/main/resources/application.yml
@@ -1,15 +1,15 @@
 server:
-  port: 8020
+  port: 8021
   servlet:
     context-path: /api/v1
 
 spring:
   application:
-    name: payment-service
-#  security:
-#    user:
-#      name: admin
-#      password: admin
+    name: payment-service2
+  #  security:
+  #    user:
+  #      name: admin
+  #      password: admin
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.jdbc.Driver
