--- a/SpringCloudDemo/spring-cloud-payment-service2/pom.xml
+++ b/SpringCloudDemo/spring-cloud-payment-service2/pom.xml
@@ -71,7 +71,11 @@
         <!--            <groupId>org.springframework.boot</groupId>-->
         <!--            <artifactId>spring-boot-starter-security</artifactId>-->
         <!--        </dependency>-->
-
+        <!-- Jasypt -->
+        <dependency>
+            <groupId>com.github.ulisesbocchio</groupId>
+            <artifactId>jasypt-spring-boot-starter</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
