--- a/SpringCloudDemo/spring-cloud-payment-service/src/main/resources/application.yml
+++ b/SpringCloudDemo/spring-cloud-payment-service/src/main/resources/application.yml
@@ -37,6 +37,10 @@ eureka:
     #eureka 主机名称
 #    instance-id: 51srm
     prefer-ip-address: true #访问路径可以显示ip
+    #Eureka服务端在收到最后一次心跳后等待时间上限，单位为秒(默认是90秒)，超时剔除
+    lease-expiration-duration-in-seconds: 90
+    #Eureka客户端向服务端发送心跳时间间隔，单位为秒(默认是30秒)
+    lease-renewal-interval-in-seconds: 30
   client:
     registerWithEureka: true
     #是否从Eureka服务端抓取已有的注册信息，集群情况下需设置为true配合ribbon做负载
