添加openfeign支持实现

--- a/SpringCloudDemo/pom.xml
+++ b/SpringCloudDemo/pom.xml
@@ -78,6 +78,7 @@
         <module>spring-cloud-payment-service2</module>
         <module>spring-cloud-payment-service-zk</module>
         <module>spring-cloud-order-service-zk</module>
+        <module>spring-cloud-order-service-feign</module>
     </modules>
 
     <!-- 子模块继承之后，提供作用：锁定版本+子module不用写groupId和version -->
