--- a/SpringCloudDemo/spring-cloud-order-service-feign/src/main/resources/application.yml
+++ b/SpringCloudDemo/spring-cloud-order-service-feign/src/main/resources/application.yml
@@ -13,3 +13,14 @@ eureka:
     fetchRegistry: true
     serviceUrl:
       defaultZone: http://learn1.51srm.com:9900/eureka,http://learn2.51srm.com:9901/eureka
+
+#设置OpenFeign客户端的超时时间
+ribbon:
+  #建立连接超时时间
+  ReadTimeout: 5000
+  #建立连接后访问服务超时时间
+  ConnectTimeout: 5000
+
+logging:
+  level:
+    com.liuwei.learn.order.service.PaymentFeignService: debug
