--- a/SpringCloudDemo/pom.xml
+++ b/SpringCloudDemo/pom.xml
@@ -81,6 +81,7 @@
         <module>spring-cloud-order-service-feign</module>
         <module>spring-cloud-payment-service-hystrix</module>
         <module>spring-cloud-order-service-feign-hystrix</module>
+        <module>spring-cloud-hystrix-dashboard</module>
     </modules>
 
     <!-- 子模块继承之后，提供作用：锁定版本+子module不用写groupId和version -->
