--- a/SpringCloudDemo/spring-cloud-order-service-feign-hystrix/src/main/resources/application.yml
+++ b/SpringCloudDemo/spring-cloud-order-service-feign-hystrix/src/main/resources/application.yml
@@ -4,15 +4,15 @@ spring:
   application:
     name: order-hystrix-service
 
-eureka:
-  instance:
-    hostname: localhost
-  client:
-    registerWithEureka: false
-    #是否从Eureka服务端抓取已有的注册信息，集群情况下需设置为true配合ribbon做负载
-    fetchRegistry: true
-    serviceUrl:
-      defaultZone: http://localhost:9900/eureka
+#eureka:
+#  instance:
+#    hostname: localhost
+#  client:
+#    registerWithEureka: false
+#    #是否从Eureka服务端抓取已有的注册信息，集群情况下需设置为true配合ribbon做负载
+#    fetchRegistry: true
+#    serviceUrl:
+#      defaultZone: http://localhost:8761/eureka
 
 #设置OpenFeign客户端的超时时间
 ribbon:
