配置中心相关问题修复及优化

--- a/SpringCloudDemo/spring-cloud-config-client/src/main/resources/bootstrap.yml
+++ b/SpringCloudDemo/spring-cloud-config-client/src/main/resources/bootstrap.yml
@@ -1,14 +1,16 @@
 server:
   port: 8889
+
 spring:
   application:
     name: config-client
   cloud:
     config:
-      label: master
-      name: application
-      profile: config
+      label: config
+      name: config
+      profile: dev
       uri: http://localhost:8888
+
 eureka:
   client:
     service-url:
