--- a/SpringCloudDemo/spring-cloud-config-client/src/main/resources/bootstrap.yml
+++ b/SpringCloudDemo/spring-cloud-config-client/src/main/resources/bootstrap.yml
@@ -15,3 +15,10 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka
+
+#暴露监控端点
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
