添加bus消息总线，通知各配置客户端统一更新

--- a/SpringCloudDemo/spring-cloud-config-client/pom.xml
+++ b/SpringCloudDemo/spring-cloud-config-client/pom.xml
@@ -33,6 +33,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
+        <!-- 消息总线 bus-kafka -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-bus-kafka</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
