添加stream消息驱动生产者模块

--- a/SpringCloudDemo/pom.xml
+++ b/SpringCloudDemo/pom.xml
@@ -85,6 +85,7 @@
         <module>spring-cloud-gateway</module>
         <module>spring-cloud-conifg</module>
         <module>spring-cloud-config-client</module>
+        <module>spring-cloud-stream-provider</module>
     </modules>
 
     <!-- 子模块继承之后，提供作用：锁定版本+子module不用写groupId和version -->
