添加stream消息驱动生产者模块发送消息代码 升级user模块swagger为3.0.0

--- a/SpringCloudDemo/spring-cloud-stream-consumer/src/main/resources/application.yml
+++ b/SpringCloudDemo/spring-cloud-stream-consumer/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 server:
-  port: 9001
+  port: 9011
 spring:
   application:
-    name: stream-provider
+    name: stream-consumer
   cloud:
     stream:
       kafka:
