--- a/SpringCloudDemo/pom.xml
+++ b/SpringCloudDemo/pom.xml
@@ -37,7 +37,7 @@
         <!-- https://mvnrepository.com/artifact/org.mybatis.spring.boot/mybatis-spring-boot-starter -->
         <mybatis.spring.boot.version>2.1.3</mybatis.spring.boot.version>
         <!-- https://mvnrepository.com/artifact/io.springfox/springfox-swagger2 -->
-        <springfox.swagger2.version>2.9.2</springfox.swagger2.version>
+        <springfox.swagger2.version>3.0.0</springfox.swagger2.version>
         <!-- https://mvnrepository.com/artifact/org.jetbrains/annotations -->
         <jetbrains.annotations.version>20.1.0</jetbrains.annotations.version>
 
@@ -86,6 +86,7 @@
         <module>spring-cloud-conifg</module>
         <module>spring-cloud-config-client</module>
         <module>spring-cloud-stream-provider</module>
+        <module>spring-cloud-stream-consumer</module>
     </modules>
 
     <!-- 子模块继承之后，提供作用：锁定版本+子module不用写groupId和version -->
