--- a/SpringCloudDemo/spring-cloud-user-service/src/main/resources/application.yml
+++ b/SpringCloudDemo/spring-cloud-user-service/src/main/resources/application.yml
@@ -8,3 +8,7 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
+springfox:
+  documentation:
+    swagger-ui:
+      enabled: true
