--- a/SpringCloudDemo/pom.xml
+++ b/SpringCloudDemo/pom.xml
@@ -87,6 +87,7 @@
         <module>spring-cloud-config-client</module>
         <module>spring-cloud-stream-provider</module>
         <module>spring-cloud-stream-consumer</module>
+        <module>spring-cloud-stream-consumer2</module>
     </modules>
 
     <!-- 子模块继承之后，提供作用：锁定版本+子module不用写groupId和version -->
